--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -79,6 +79,8 @@ h6,
 
 /* Media Query */
 @media screen and (max-width: 991px) {
+
+  .validate { position: static !important; }
 	.xxxxl-font-size {
 		font-size: 300%;
 	}
@@ -100,6 +102,8 @@ h6,
 }
 
 @media screen and (max-width: 767px) {
+
+  .validate { position: static !important; }
 	.xxxxl-font-size {
 		font-size: 300%;
 	}
@@ -117,7 +121,11 @@ h6,
 	}
 }
 
+
 @media screen and (max-width: 567px) {
+
+  .validate { position: static !important; }
+
 	.xxxxl-font-size {
 		font-size: 225%;
 	}
